fix: complete Hindi translations and translate language names in all locales
- Add missing Hindi translations for comparison ROI section
- Translate product_extended language names to native languages for all locales
- Add missing data-i18n attributes to footer section

Co-Authored-By: KaivalyaDeepTeam <KaivalyaDeepTeam@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -728,11 +728,11 @@
                         <img src="assets/logo.svg" alt="LocalMind" width="40" height="40">
                         <span>LocalMind</span>
                     </a>
-                    <p class="footer-mission">AI that's free, private, and yours.</p>
-                    <p class="company">A <strong>Svetozar Technologies</strong> Project</p>
+                    <p class="footer-mission" data-i18n="footer.tagline">AI that's free, private, and yours.</p>
+                    <p class="company" data-i18n="footer.company">A <strong>Svetozar Technologies</strong> Project</p>
                 </div>
                 <div class="footer-links">
-                    <h4>Mission</h4>
+                    <h4 data-i18n="footer.mission_title">Mission</h4>
                     <ul>
                         <li><a href="#mission">Our Beliefs</a></li>
                         <li><a href="#product">The Product</a></li>
@@ -740,7 +740,7 @@
                     </ul>
                 </div>
                 <div class="footer-links">
-                    <h4>Community</h4>
+                    <h4 data-i18n="footer.community_title">Community</h4>
                     <ul>
                         <li><a href="https://github.com/KaivalyaDeepTeam/localmind" target="_blank">GitHub</a></li>
                         <li><a href="https://github.com/KaivalyaDeepTeam/localmind/discussions" target="_blank">Discussions</a></li>
@@ -755,15 +755,15 @@
                     </ul>
                 </div>
                 <div class="footer-links">
-                    <h4>Legal</h4>
+                    <h4 data-i18n="footer.legal_title">Legal</h4>
                     <ul>
                         <li><a href="privacy.html">Privacy Policy</a></li>
                     </ul>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 Svetozar Technologies</p>
-                <p class="footer-tagline">Building AI that serves humanity, not corporations.</p>
+                <p data-i18n="footer.copyright">&copy; 2025 Svetozar Technologies</p>
+                <p class="footer-tagline" data-i18n="footer.footer_tagline">Building AI that serves humanity, not corporations.</p>
             </div>
         </div>
     </footer>
