feat: add technical guide download section to website
- Add documentation section with PDF download links in 8 languages
- Add CSS styles for docs-grid and doc-link components
- Add translation keys for docs section in all language files

Co-Authored-By: KaivalyaDeepTeam <KaivalyaDeepTeam@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -659,6 +659,44 @@
                     </div>
                 </div>
             </div>
+            <div class="documentation-section">
+                <h4 data-i18n="docs.heading">📚 Technical Guide</h4>
+                <p data-i18n="docs.description">Comprehensive documentation covering installation, model selection, transcription, quality scoring, and troubleshooting.</p>
+                <div class="docs-grid">
+                    <a href="https://github.com/KaivalyaDeepTeam/LocalMind/releases/download/v1.2.0/LocalMind_Technical_Guide_EN.pdf" class="doc-link" target="_blank">
+                        <span class="doc-flag">🇺🇸</span>
+                        <span>English</span>
+                    </a>
+                    <a href="https://github.com/KaivalyaDeepTeam/LocalMind/releases/download/v1.2.0/LocalMind_Technical_Guide_HI.pdf" class="doc-link" target="_blank">
+                        <span class="doc-flag">🇮🇳</span>
+                        <span>हिन्दी</span>
+                    </a>
+                    <a href="https://github.com/KaivalyaDeepTeam/LocalMind/releases/download/v1.2.0/LocalMind_Technical_Guide_ES.pdf" class="doc-link" target="_blank">
+                        <span class="doc-flag">🇪🇸</span>
+                        <span>Español</span>
+                    </a>
+                    <a href="https://github.com/KaivalyaDeepTeam/LocalMind/releases/download/v1.2.0/LocalMind_Technical_Guide_FR.pdf" class="doc-link" target="_blank">
+                        <span class="doc-flag">🇫🇷</span>
+                        <span>Français</span>
+                    </a>
+                    <a href="https://github.com/KaivalyaDeepTeam/LocalMind/releases/download/v1.2.0/LocalMind_Technical_Guide_AR.pdf" class="doc-link" target="_blank">
+                        <span class="doc-flag">🇸🇦</span>
+                        <span>العربية</span>
+                    </a>
+                    <a href="https://github.com/KaivalyaDeepTeam/LocalMind/releases/download/v1.2.0/LocalMind_Technical_Guide_JA.pdf" class="doc-link" target="_blank">
+                        <span class="doc-flag">🇯🇵</span>
+                        <span>日本語</span>
+                    </a>
+                    <a href="https://github.com/KaivalyaDeepTeam/LocalMind/releases/download/v1.2.0/LocalMind_Technical_Guide_RU.pdf" class="doc-link" target="_blank">
+                        <span class="doc-flag">🇷🇺</span>
+                        <span>Русский</span>
+                    </a>
+                    <a href="https://github.com/KaivalyaDeepTeam/LocalMind/releases/download/v1.2.0/LocalMind_Technical_Guide_ZH.pdf" class="doc-link" target="_blank">
+                        <span class="doc-flag">🇨🇳</span>
+                        <span>中文</span>
+                    </a>
+                </div>
+            </div>
         </div>
     </section>
 
